camera ui fixes -> 1sec out of alignment issue fix; image cropper color fix; icons background color black - trying a fix

--- a/src/cropper.css
+++ b/src/cropper.css
@@ -66,8 +66,8 @@
 .cropper-view-box {
   display: block;
   height: 100%;
-  outline: 1px solid #39f;
-  outline-color: rgba(51, 153, 255, 0.75);
+  outline: 1px solid #8c69ff;
+  outline-color: #8c69ff;
   overflow: hidden;
   width: 100%;
 }
@@ -146,7 +146,7 @@
 }
 
 .cropper-line {
-  background-color: #39f;
+  background-color: #8c69ff;
 }
 
 .cropper-line.line-e {
@@ -178,10 +178,12 @@
 }
 
 .cropper-point {
-  background-color: #39f;
+  background-color: #fff;
   height: 5px;
   opacity: 0.75;
   width: 5px;
+  border: 3px solid #8c69ff;
+  border-radius: 6px;
 }
 
 .cropper-point.point-e {
